# RAG_langgrpah-legalMind

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  UPGRADE_PLAN.md  docker-compose.yml  优化项目.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: document_agent.py  human_loop.py  intent_agent.py  qa_agent.py  retrieval_agent.py  workflow.py
backend/app/api/: auth.py  cases.py  chat.py  documents.py
backend/app/db/: database.py
backend/app/llm/: checkpoint.py  model_client.py  prompts.py
backend/app/models/: case.py  chat.py  document.py  user.py
backend/app/rag/: embeddings.py  reranker.py  retriever.py  vector_store.py
backend/app/services/: case_service.py
backend/app/utils/: security.py
backend/data/: legal_eval_dataset.json
backend/models/bge-small-zh/: config.json
backend/scripts/: build_index.py  crawl_legal_data.py  seed_cases.py
backend/test/: test_llm.py  test_rag.py  test_wf.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: cases.js  chat.js  client.js  documents.js
frontend/src/components/chat/: ChatInput.vue  ChatMessage.vue  ChatSidebar.vue  InterruptCard.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  chat.js
frontend/src/views/: CaseSearch.vue  Chat.vue  DocumentGenerate.vue  Home.vue  Login.vue  Register.vue
