[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136",
    "langchain>=1.3",
    "langchain-chroma>=1.1",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.2",
    "langchain-openai>=1.2",
    "langgraph>=1.2",
    "langgraph-checkpoint-postgres>=2.1",
    "psycopg[binary,pool]>=3.2",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.5",
    "rank-bm25>=0.2.2",
    "redis>=8.0",
    "sentence-transformers>=5.5",
    "tortoise-orm[asyncpg]>=0.24",
    "tzdata==2026.2",
]
